--- a/index.html
+++ b/index.html
@@ -102,7 +102,62 @@
       </section>
     </div>
     <!-- Home end -->
-    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
+    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+      <!-- about section start -->
+      <section id="about">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="row align-items-center">
+                <div class="col-lg-6">
+                   <div class="feature-item">
+                     <div class="icon">
+                      <i class="fas fa-graduation-cap"></i>
+                     </div>
+                    <h3 class="mb-0 p-0">Web designe</h3>
+                    <p>Simply dummy text of the print and typesetting industry lorem Ipsum has been standard.</p>
+                    <div class="icon-tow text-end">
+                      <a href="#" class="text-end"><i class="fas fa-long-arrow-alt-right"></i></a>
+                    </div>
+                   </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="feature-item mt-3">
+                    <div class="icon">
+                      <i class="fab fa-bitbucket"></i>
+                    </div>
+                   <h3 class="mb-0 p-0 text-uppercase">e-commerce</h3>
+                   <p>Simply dummy text of the print and typesetting industry lorem Ipsum has been standard.</p>
+                   <div class="icon-tow text-end">
+                     <a href="#" class="text-end"><i class="fas fa-long-arrow-alt-right"></i></a>
+                   </div>
+                  </div>
+                  <div class="feature-item mt-3">
+                    <div class="icon">
+                      <i class="fab fa-wordpress"></i>
+                    </div>
+                   <h3 class="mb-0 p-0 text-uppercase">Wordpress</h3>
+                   <p>Simply dummy text of the print and typesetting industry lorem Ipsum has been standard.</p>
+                   <div class="icon-tow text-end">
+                     <a href="#" class="text-end"><i class="fas fa-long-arrow-alt-right"></i></a>
+                   </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="heading-area">
+                <h4 class="mb-0 p-0">Basic info about componay</h4>
+                <h3 class="mb-0 p-0">Digital Creator & Strategists</h3>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                <p> If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden the middle.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- about section end -->
+    </div>
     <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
   </div>
   <!-- Navbar ends -->
