--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
       <section id="about">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6">
-              <div class="row align-items-center">
-                <div class="col-lg-6">
+            <div class="col-lg-6 order-2 order-lg-1">
+              <div class="row align-items-start align-items-lg-center">
+                <div class="col-lg-6 col-md-6 order-2 order-lg-1">
                    <div class="feature-item">
                      <div class="icon">
                       <i class="fas fa-graduation-cap"></i>
@@ -121,8 +121,8 @@
                     </div>
                    </div>
                 </div>
-                <div class="col-lg-6">
-                  <div class="feature-item mt-3">
+                <div class="col-lg-6 col-md-6 order-1 order-lg-2 mb-3 mb-lg-0">
+                  <div class="feature-item mt-0 mt-lg-3">
                     <div class="icon">
                       <i class="fab fa-bitbucket"></i>
                     </div>
@@ -145,8 +145,8 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-6">
-              <div class="heading-area">
+            <div class="col-lg-6 order-1 order-lg-2">
+              <div class="heading-area text-center text-lg-start">
                 <h4 class="mb-0 p-0">Basic info about componay</h4>
                 <h3 class="mb-0 p-0">Digital Creator & Strategists</h3>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
